# mapaction-worldpop

./: README.rst  pyproject.toml
mapaction_worldpop/: calculate_zonal_stats.py  config.yml
notebooks/: worldpop_zonal_stats_demo.ipynb
tests/: test_mapaction_worldpop.py
