[tool.poetry]
name = "mapaction-worldpop"
version = "0.1.0"
description = ""
authors = ["cate <catherine.seale@ukho.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
rasterio = "^1.2.10"
pandas = "^1.4.0"
geopandas = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
